--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
 		"nodemon": "^3.1.10"
 	},
 	"scripts": {
+		"build": "node -e \"console.log('No build step required for backend')\"",
 		"start": "node server.js",
 		"dev": "nodemon server.js"
 	}
