--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "cd backend && pnpm build",
+    "start": "cd backend && pnpm start",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
