--- a/backend/.env
+++ b/backend/.env
@@ -1,4 +1,4 @@
 PORT=5000
-MONGO_URI=your-mongodb-connection-string
+MONGO_URI=mongodb+srv://quickandquality_db:122766nnk@cluster0.f8rbxdf.mongodb.net/?appName=Cluster0
 JWT_SECRET=super-secure-secret
 
