--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,5 @@
 VITE_API_BASE_URL=https://quickandquality.onrender.com/api
 
+VITE_EMAILJS_PUBLIC_KEY=eXdjuxcxOyj7PM57p
+VITE_EMAILJS_SERVICE_ID=service_zo488hr
+VITE_EMAILJS_TEMPLATE_ID=template_y05qq3f
